fixed break timer text overflowing in mobile

--- a/src/App.css
+++ b/src/App.css
@@ -217,4 +217,8 @@ html:fullscreen {
   #dim {
     width: 70px;
   }
+
+  #bt {
+    max-width: 100%;
+  }
 }
